# agex-ui

./: .gitignore  README.md  agex-ui.code-workspace  pyproject.toml  pyrightconfig.json
.agex/primer_cache/: chat-8c5d601a-ch16000-mgpt-4-1.md  lorem_ipsum-24bd26b2-ch16000-mgpt-4-1.md  lorem_ipsum-9e54051c-ch16000-mgpt-4-1.md
agex_ui/: __init__.py
agex_ui/cal/: agent.py  main.py  primer.py  turn.py  utils.py
agex_ui/chat/: agent.py  main.py  primer.py  turn.py
agex_ui/core/: __init__.py  events.py  history.py  renderers.py  responses.py  theme.py  turn.py  utils.py
agex_ui/lorem_ipsum/: main.py  primer.py
agex_ui/templates/: __init__.py  chat_interface.py
agex_ui/tmnt/: agent.py  main.py  primer.py  utils.py
