[project]
name = "agex-ui"
version = "0.0.1"
description = "A dynamic UI generation powered by agex and NiceGUI."
authors = [{ name = "ashenfad"}]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "nicegui",
    "plotly"
    "numpy"
    "pandas"
    "agex[openai]"  # or "agex[anthropic]" or "agex[gemini]"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "uv"
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
