[project]
name = "agex-ui"
version = "0.0.1"
description = "A dynamic UI generation powered by agex and NiceGUI."
authors = [{ name = "ashenfad"}]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "nicegui",
    "plotly",
    "kaleido",  # for exporting plotly figures
    "numpy",
    "pandas",
    "markdown",
    "pygments",  # for syntax highlighting
    "agex[gemini]>=0.8.5",
    "calgebra[google-calendar]>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "uv"
]

[tool.setuptools]
packages = {find = {where = ["./"], exclude = ["tests*", "build*"]}}  # Discover packages, exclude tests/examples

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
